force-app/main/default/objects/Prix_de_livraison__c/Prix_de_livraison__c.object-meta.xml
<CustomObject>
    <label>Prix de livraison</label>
    <nameField>
        <label>Prix de livraison</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prix de livraison</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>