force-app/main/default/objects/Prix_de_livraison__c/fields/Delai_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Delai_de_livraison__c</fullName>
    <label>Delai de livraison</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>