force-app/main/default/objects/Prix_de_livraison__c/fields/Prix__c.field-meta.xml
<CustomField>
    <fullName>Prix__c</fullName>
    <label>Prix</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>