force-app/main/default/objects/Prix_de_livraison__c/fields/Transporteur__c.field-meta.xml
<CustomField>
    <fullName>Transporteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporteur</label>
    <referenceTo>Transporteur__c</referenceTo>
    <relationshipLabel>Prix de livraison</relationshipLabel>
    <relationshipName>Prix_de_livraison</relationshipName>
    <type>Lookup</type>
</CustomField>